update TaylorFitted blog

--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-"Hello World!"
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sneaker Blog</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Reviews</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <h1>Sneaker Blog</h1>
+    </header>
+
+    <main>
+        <h2>Latest Reviews</h2>
+        <div class="review">
+            <img src="https://via.placeholder.com/200x200" alt="Sneaker Image">
+            <h3>Nike Air Max 270 React</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor turpis a tristique tristique. Suspendisse potenti. Mauris tempor nisi a lacinia dictum.</p>
+            <a href="#">Read More</a>
+        </div>
+
+        <div class="review">
+            <img src="https://via.placeholder.com/200x200" alt="Sneaker Image">
+            <h3>Adidas Ultra Boost 21</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor turpis a tristique tristique. Suspendisse potenti. Mauris tempor nisi a lacinia dictum.</p>
+            <a href="#">Read More</a>
+        </div>
+
+        <div class="review">
+            <img src="https://via.placeholder.com/200x200" alt="Sneaker Image">
+            <h3>New Balance Fresh Foam 1080v11</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor turpis a tristique tristique. Suspendisse potenti. Mauris tempor nisi a lacinia dictum.</p>
+            <a href="#">Read More</a>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Sneaker Blog</p>
+    </footer>
+</body>
+</html>
